--- a/content/posts/2026-02-10-hello.md
+++ b/content/posts/2026-02-10-hello.md
@@ -15,6 +15,8 @@ Copy it, update a few fields, commit to `main`, and the build will generate a ne
 
 ## 1. Where to Put Files
 
+Project repo: [https://github.com/Warwick-Racing/ai/](https://github.com/Warwick-Racing/ai/)
+
 Put all new posts in:
 
 `content/posts/`
